# asios

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CLEANUP_LOG.md  dragon.py  dragon_health.py
docs/: hardware_debayer_notes.md  venus-encoderd.md
kernel/configs/: vamos.config
kernel/dts/: sdm845-comma-common.dtsi  sdm845-comma-mici.dts  sdm845-comma-tizi.dts
kernel/modules/: aic8800_fdrv.ko  aic_btusb.ko  aic_load_fw.ko  btintel.ko  btmtk.ko  btrtl.ko  btusb.ko  camera_overlay.ko
kernel/overlays/: dragon-camera-fw.dts  dragon-camera.dts
kernel/patches/: 0007-input-edt-ft5x06-add-support-for-FocalTech-FT3168.patch  0008-media-camss-add-VFE-PIX-pipeline-and-userspace-register-control.patch  0008-media-camss-vfe-170-add-PIX-pipeline-for-NV12.patch  0009-media-i2c-add-OmniVision-OX03C10-sensor-driver.patch  0010-media-camss-csid-gen2-add-IPP-pixel-path-for-PIX.patch  0032-arm64-dts-qcom-Add-initial-support-for-Radxa-Dragon-.patch  0048-arm64-dts-qcom-qcs6490-radxa-dragon-q6a-Enable-eMMC.patch  0050-arm64-dts-qcom-qcs6490-radxa-dragon-q6a-enable-cam2-imx219.patch  0051-arm64-dts-qcom-Makefile-add-radxa-dragon-q6a.patch  0052-clk-qcom-dispcc-sc7280-CLK_IGNORE_UNUSED-for-UEFI-DP-clocks.patch  0053-dwc3-allow-runtime-mode-switching-for-host-mode.patch  0054-arm64-dts-qcom-qcs6490-radxa-dragon-q6a-add-venus-en.patch  0054-efi-libstub-add-asius-panda-spidev-node.patch  0055-firmware-qcom-allow-dragon-q6a-qseecom.patch  (+1 more)
tools/: camera_mjpeg_server.py  vamos
userspace/: base_setup.sh
userspace/uv/: pyproject.toml
userspace/uv/openpilot/: pyproject.toml
(+199 files in other folders)
